--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">To Do</string>
+    <string name="string_priority">Priority</string>
+    <string name="string_title">Title</string>
+    <string name="string_description">Description</string>
+
+
 </resources>
