--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="string_priority">Priority</string>
     <string name="string_title">Title</string>
     <string name="string_description">Description</string>
+    <string name="description">Description</string>
+    <string name="title">Title</string>
+    <string name="_one">1</string>
 
 
 </resources>
