LINT code fixes

--- a/app/src/main/res/values-es-rUS/strings.xml
+++ b/app/src/main/res/values-es-rUS/strings.xml
@@ -7,4 +7,8 @@
     <string name="title">" Título"</string>
     <string name="_one">1</string>
     <string name="description">" descripción"</string>
+    <string name="rate_me"> Califícame</string>
+    <string name="delete_all_notes">Borrar todas las notas</string>
+    <string name="save">Salvar</string>
+
 </resources>
