--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="description">Description</string>
     <string name="title">Title</string>
     <string name="_one">1</string>
+    <string name="save">Save</string>
+    <string name="delete_all_notes">Delete all notes</string>
+    <string name="rate_me">Rate Me</string>
 
 
 </resources>
